--- a/src/practice_kyobo.ipynb
+++ b/src/practice_kyobo.ipynb
@@ -4345,6 +4345,98 @@
     "output_file = os.path.join(output_data_dir, 'genre_novel(kyobo)2.csv')\n",
     "df_percent.to_csv(output_file, index=False, header=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered data has been saved to /Users/haebin/Desktop/sesac/project/BookTrends-Analysis/genre_bestseller_kyobo.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "project_root = os.path.dirname(os.getcwd())  \n",
+    "input_dir = os.path.join(project_root, 'data_kyobo')  # 월별 CSV 파일이 저장된 디렉토리\n",
+    "output_file =os.path.join(project_root, 'genre_bestseller_kyobo.csv')  # 최종 저장할 파일 경로\n",
+    "\n",
+    "# 필터링된 데이터를 저장할 리스트\n",
+    "filtered_data = []\n",
+    "\n",
+    "# 디렉토리 내 모든 CSV 파일 읽기\n",
+    "for filename in os.listdir(input_dir):\n",
+    "    if filename.endswith(\".csv\"):  # CSV 파일만 처리\n",
+    "        file_path = os.path.join(input_dir, filename)\n",
+    "        \n",
+    "        # CSV 파일 읽기\n",
+    "        data = pd.read_csv(file_path)\n",
+    "        \n",
+    "        # 조건: 'category'가 \"일반\"이 아닌 데이터 필터링\n",
+    "        filtered = data[data['Category'] != '일반']\n",
+    "        \n",
+    "        # 필터링된 데이터 추가\n",
+    "        filtered_data.append(filtered)\n",
+    "\n",
+    "# 모든 필터링된 데이터 병합\n",
+    "final_data = pd.concat(filtered_data, ignore_index=True)\n",
+    "\n",
+    "# 최종 데이터 저장\n",
+    "final_data.to_csv(output_file, index=False, encoding='utf-8-sig')  # UTF-8 인코딩\n",
+    "\n",
+    "print(f\"Filtered data has been saved to {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged data has been saved to /Users/haebin/Desktop/sesac/project/BookTrends-Analysis/nobel_bestseller_kyobo.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# 데이터가 저장된 디렉토리 경로\n",
+    "project_root = os.path.dirname(os.getcwd())  \n",
+    "input_dir = os.path.join(project_root, 'data_kyobo_t')  # 월별 CSV 파일이 저장된 디렉토리\n",
+    "output_file =os.path.join(project_root, 'nobel_bestseller_kyobo.csv')  # 최종 저장할 파일 경로\n",
+    "\n",
+    "# 병합된 데이터를 저장할 리스트\n",
+    "merged_data = []\n",
+    "\n",
+    "# 디렉토리 내 모든 CSV 파일 읽기\n",
+    "for filename in os.listdir(input_dir):\n",
+    "    if filename.endswith(\".csv\"):  # CSV 파일만 처리\n",
+    "        file_path = os.path.join(input_dir, filename)\n",
+    "        \n",
+    "        # CSV 파일 읽기\n",
+    "        data = pd.read_csv(file_path)\n",
+    "        \n",
+    "        # 데이터 추가\n",
+    "        merged_data.append(data)\n",
+    "\n",
+    "# 모든 데이터를 병합\n",
+    "final_data = pd.concat(merged_data, ignore_index=True)\n",
+    "\n",
+    "# 최종 데이터 저장\n",
+    "final_data.to_csv(output_file, index=False, encoding='utf-8-sig')  # UTF-8 인코딩\n",
+    "\n",
+    "print(f\"Merged data has been saved to {output_file}\")"
+   ]
   }
  ],
  "metadata": {
